--- a/src/main/webapp/css/bootstrap.css
+++ b/src/main/webapp/css/bootstrap.css
@@ -3452,11 +3452,6 @@ input[type="button"].btn-block {
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
     background-color: #5bb75b;
     *background-color: #51a351;
-    background-image: -moz-linear-gradient(top, #62c462, #51a351);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#62c462), to(#51a351));
-    background-image: -webkit-linear-gradient(top, #62c462, #51a351);
-    background-image: -o-linear-gradient(top, #62c462, #51a351);
-    background-image: linear-gradient(to bottom, #62c462, #51a351);
     background-repeat: repeat-x;
     border-color: #51a351 #51a351 #387038;
     border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
@@ -3464,7 +3459,9 @@ input[type="button"].btn-block {
     filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
 }
 
-
+.btn-success:hover,
+.btn-success:focus,
+.btn-success:active,
 .btn-success.disabled,
 .btn-success[disabled] {
     color: #ffffff;
